# Zoadra_GWT_Engine

./: .gitignore  A Meditation on the Metaluminous Ethica; A Dive into a Deep Reality System v23 COMPLETE (1).txt  ARCHITECTURE.md  CONSCIOUSNESS_ESSAY.md  ETHICA_UNIVERSALIS_COMPLETE.docx  ETHICA_UNIVERSALIS_COMPLETE.md  GRAND_UNIFIED_THEORY.txt  IMPROVED_ESSAY.md  LICENSE  LUMINA_RAG_INTEGRATION.md  Modelfile-14b  Modelfile-32b  Modelfile-7b  Modelfile-phi  NOVEL_PHILOSOPHY_SYSTEM.md  README.md  complete_integration_progress.json  complete_knowledge_integration.py  consciousness_amplifier.py  convert_docx_to_md.py  curriculum_rag.py  debate_orchestrator.py  essay_progress.json  ethica_lumina.py  ethica_universalis.py  feed_to_gemini.py  grand_unified_theory_progress.json  grand_unified_theory_synthesis.py  improved_essay_generator.py  improved_essay_progress.json  mega_essay_generator.py  mega_essay_log.txt  mega_essay_progress.json  metaluminous_ethica_integration.py  monitor_integration.ps1  mystery_machine.py  novel_philosophy_generator.py  parallel_debate_orchestrator.py  parallel_debate_progress.json  philosophical_memory.json  (+16 more)
gwt_engine/: __init__.py
outputs/: ETHICA_UNIVERSALIS.json  ETHICA_UNIVERSALIS.md  ETHICA_UNIVERSALIS_REFINED.md  ethica_universalis_progress.json  gemini_responses.json  parallel_debate.json
philosophy_texts/: aristotle_nicomachean.txt  descartes_meditations.txt  emerson_essays.txt  epictetus.txt  kant_critique_pure_reason.txt  machiavelli_prince.txt  marcus_aurelius.txt  more_utopia.txt  nietzsche_zarathustra.txt  plato_apology.txt  (+2 more)
(+149 files in other folders)
